Add level legend and improve sharing workflow

--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
         </div>
         <p class="panel-subtitle">Kies je niveau in je Technasiumopdracht, lees wat het betekent en zie direct wat je kunt doen om door te groeien.</p>
       </div>
+      <div class="level-legend" aria-label="Uitleg niveaus 1 tot en met 5">
+        <div class="level-legend-title">Wat betekenen de niveaus?</div>
+        <ol id="level-legend-list" class="level-legend-list"></ol>
+      </div>
       <div id="skill-cards" class="cards"></div>
     </section>
   </main>
