--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
         <span class="legend-item"><span class="legend-dot" style="background:#ff7ab8"></span> Samenwerken</span>
         <span class="legend-item"><span class="legend-dot" style="background:#f7b500"></span> Probleem oplossen</span>
         <span class="legend-item"><span class="legend-dot" style="background:#6dd93b"></span> Creatief</span>
+        <span class="legend-item"><span class="legend-dot" style="background:#f97316"></span> Plannen</span>
+        <span class="legend-item"><span class="legend-dot" style="background:#0ea5e9"></span> Doorzetten</span>
         <span class="legend-item"><span class="legend-dot" style="background:#9b7bff"></span> Ondernemend</span>
-        <span class="legend-item"><span class="legend-dot" style="background:#f97316"></span> Plannen &amp; doorzetten</span>
       </div>
     </section>
 
@@ -60,6 +61,10 @@
           <h2>Jouw vaardigheden</h2>
         </div>
         <p class="panel-subtitle">Kies je niveau in je Technasiumopdracht, lees wat het betekent en zie direct wat je kunt doen om door te groeien.</p>
+      </div>
+      <div class="level-legend" aria-label="Uitleg niveaus 1 tot en met 5">
+        <div class="level-legend-title">Wat betekenen de niveaus?</div>
+        <ol id="level-legend-list" class="level-legend-list"></ol>
       </div>
       <div id="skill-cards" class="cards"></div>
     </section>
